--- a/08:Creating Parallax Effect/style.css
+++ b/08:Creating Parallax Effect/style.css
@@ -28,19 +28,12 @@ body {
 }
 
 .parallax-item {
-  width: 300px;
-  height: 300px;
+  background-color: black;
+  width: 200px;
+  height: 200px;
   position: absolute;
   left: 50%;
   top: 50%;
-  margin-left: -150px;
-  margin-top: -150px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.parallax-item img {
-  max-width: 100%;
-  max-height: 100%;
+  margin-left: -100px;
+  margin-top: -100px;
 }
