--- a/09:Making it More Realistic/style.css
+++ b/09:Making it More Realistic/style.css
@@ -28,12 +28,19 @@ body {
 }
 
 .parallax-item {
-  background-color: black;
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   position: absolute;
   left: 50%;
   top: 50%;
-  margin-left: -100px;
-  margin-top: -100px;
+  margin-left: -150px;
+  margin-top: -150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.parallax-item img {
+  max-width: 100%;
+  max-height: 100%;
 }
