--- a/08:Creating Parallax Effect/style.css
+++ b/08:Creating Parallax Effect/style.css
@@ -36,4 +36,12 @@ body {
   top: 50%;
   margin-left: -100px;
   margin-top: -100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.parallax-item img {
+  max-width: 100%;
+  max-height: 100%;
 }
