08:adding overflow property so it's realistic

--- a/12:Using_Mouse_and_Scroll_Position/style.css
+++ b/12:Using_Mouse_and_Scroll_Position/style.css
@@ -6,6 +6,7 @@ body {
 .parallax-container {
   min-height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 .parallax-container.alt {
   background-color: hsl(300, 30%, 89%);
